[package]
name = "imagenet_preproc"
version = "0.0.1"
authors = ["Peter Jin <peterhaijin@gmail.com>"]

[lib]
name = "imagenet_preproc"
path = "src/lib.rs"

[[bin]]
name = "preproc-archive"
path = "tools/preproc-archive.rs"

[dependencies]
rand = "*"
rustc-serialize = "*"
time = "*"

byteorder = "*"
#chan = "*"
csv = "*"
image = { path = "../image" }
memmap = "*"
tar = "*"
threadpool = "*"

varraydb = { path = "../varraydb" }
