[package]
name = "imagenet_preproc"
version = "0.0.1"
authors = ["Peter Jin <peterhaijin@gmail.com>"]

[lib]
name = "imagenet_preproc"
path = "src/lib.rs"

[[bin]]
name = "preproc-ilsvrc"
path = "tools/preproc-ilsvrc.rs"

[dependencies]
rand = "*"
rustc-serialize = "*"
time = "*"

byteorder = "*"
#chan = "*"
csv = "*"
image = { path = "../image" }
#magick = { path = "../magick" }
memmap = "*"
sdl2 = { path = "../rust-sdl2" }
sdl2_image = { path = "../rust-sdl2_image" }
stb_image = { path = "../rust-stb-image" }
tar = "*"
threadpool = "*"

array_cuda = { path = "../libarray_cuda" }
array_new = { path = "../libarray_new" }
epeg = { path = "../libepeg" }
rembrandt_kernels = { path = "../rembrandt_kernels" }
turbojpeg = { path = "../libturbojpeg" }
varraydb = { path = "../varraydb" }
#vips = { path = "../libvips" }
